# ai-infra-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USAGE_GUIDE.md  diff.patch  diff.txt  requirements.md  user_changes.patch
ai-infra/: README.md  pyproject.toml
ai-infra/ai_infra/: __init__.py  __main__.py
ai-infra/ai_infra/analyzer/: core.py
ai-infra/ai_infra/analyzer/detectors/: base.py  go.py  node.py  python.py
ai-infra/ai_infra/api/: app.py
ai-infra/ai_infra/config/: settings.py
ai-infra/ai_infra/fix/: fix_loop.py
ai-infra/ai_infra/generator/: generator.py
ai-infra/ai_infra/generator/templates/ci/: bitbucket-pipelines.yml.j2  circleci.yml.j2  github-actions.yml.j2  gitlab-ci.yml.j2
ai-infra/ai_infra/generator/templates/compose/: docker-compose.yml.j2
ai-infra/ai_infra/generator/templates/docker/: Dockerfile.j2
ai-infra/ai_infra/models/: infra_model.py
ai-infra/ai_infra/planner/: planner.py  prompts.py
ai-infra/ai_infra/state/: state_manager.py
ai-infra/cli/: main.py
ai-infra/tests/: conftest.py
ai-infra/tests/analyzer/: test_detectors.py
ai-infra/tests/fix/: test_fix_loop.py
ai-infra/tests/generator/: test_generator.py  test_golden_snapshots.py  test_new_generators.py
ai-infra/tests/golden/enterprise_stack/: Chart.yaml  acme-namespace.yaml  acme-network-policy.yaml  acme-resource-quota.yaml  alerting-rules.yaml  gitlab-ci.yml  grafana-dashboard.json  main.tf  values.yaml  web-servicemonitor.yaml
ai-infra/tests/models/: test_infra_model.py
ai-infra/tests/planner/: test_planner.py  test_planner_hints.py
(+20 files in other folders)
